CV Daniel Elias Gomez

--- a/08-HTML/homework/CV.html
+++ b/08-HTML/homework/CV.html
@@ -60,7 +60,7 @@
 
             <legend>Experiencia Laboral</legend>
             <ul>
-                <li> Encargado de Tienda online y fisica. MultirubroGroup</li>
+                <li> (2021-2022)Encargado de Tienda online y fisica. MultirubroGroup</li>
             </ul>
 
         </fieldset>
